--- a/style.css
+++ b/style.css
@@ -9,3 +9,16 @@ img{
     width: 100%;
     height: 100%;
 }
+
+.main-sec{
+    position: relative;
+    overflow: hidden !important;
+}
+
+.intalks{
+    position:absolute ;
+    width:400px;
+    height: 300px;
+    left: 120px;
+    top: -90px !important;
+}
