--- a/src/css/showcase.css
+++ b/src/css/showcase.css
@@ -1046,4 +1046,41 @@
   padding: 0 20px;
 }
 
+.section-image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+}
+.image-swipe{
+  width: 100%;
+  height: 33vh !important;
+  overflow: hidden !important;
+}
+
+.img-mask {
+  width: 100%;
+  height: 100vh;
+  display: block;
+  position: absolute;
+  box-sizing: border-box;
+}
+.swiper-slide {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    /* overflow: hidden; */
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    user-select: none;
+}
+/* .last-swiper-slide{
+  height: 30vh !important;
+  margin-bottom: -50px !important;
+} */
+
 }			
+
