--- a/src/css/showcase.css
+++ b/src/css/showcase.css
@@ -1114,8 +1114,60 @@
   padding: 10px;
   border-radius: 5px !important;
 }
-
-}			
+.main-title {
+  display: flex;
+  justify-content: center !important;
+  align-items: center !important;
+  height: 16vh !important;
+  position: relative;
+}
+.formsubmit {
+  position: fixed !important;
+  display: flex;
+  flex-direction: column;
+  width: 150px !important;
+  border-radius: 10px;
+  left: 10px !important;
+  /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
+}
+.formsubmit input{
+  padding: 0 0 0 0 !important;
+  margin-bottom: 10px !important;
+  overflow: hidden;
+  border: 0;
+  outline: none;
+  border-bottom: 2px solid #000;
+  background-color: transparent;
+  /* border-radius: 5px; */
+}
+.formsubmit select{
+  padding:0px 0px 5px 0px  !important;
+  margin-bottom: 10px !important;
+  overflow: hidden;
+  border: 0;
+  outline: none;
+  border-bottom: 2px solid #000;
+  background-color: transparent;
+  font-size:7px !important;
+  /* border-radius: 5px; */
+}
+.formsubmit ::placeholder{
+  color: #000 !important;
+  font-size:7px !important;
+  position: absolute;
+  transition: 0.3s;
+  pointer-events: none;
+}
+#btnsbmt {
+  background-color: #000;
+  color: #fff;
+  border: 0;
+  outline: 0;
+  border-radius: 10px;
+  padding: 5px !important;
+  font-size:7px !important;
+}
+}	
 
 .iframe-container {
   position: relative;
@@ -1162,3 +1214,48 @@
   margin-right: 5px !important;
 }
 
+.main-title {
+  display: flex;
+  justify-content: center; 
+  align-items: flex-end; 
+  height: 25vh;
+  position: relative;
+  
+}
+
+.formsubmit {
+  position:absolute;
+  display: flex;
+  flex-direction: column; 
+  width: 400px; 
+  border-radius: 10px;
+  left: 100px;
+  /* box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); */
+
+}
+
+.formsubmit input,select{
+  padding:0 0 15px 0;
+  margin-bottom: 50px;
+  overflow: hidden;
+  border: 0;
+  outline: none;
+  border-bottom: 2px solid #000;
+  background-color: transparent;
+  /* border-radius: 5px; */
+}
+.formsubmit ::placeholder{
+  color: #000 !important;
+  /* font-size:25px; */
+  position: absolute;
+  transition: 0.3s;
+  pointer-events: none;
+}
+#btnsbmt{
+  background-color: #000;
+  color: #fff;
+  border: 0;
+  outline: 0;
+  border-radius: 10px;
+  padding: 10px !important;
+}
